# agents-hack

./: .example.env  README.md  agent.py  latex_generator.py  requirements.txt
catacombs/: README.md  pyproject.toml  report.md
catacombs/src/catacombs/config/: agents.yaml
latex_template/: main.tex  paper.tex
src/catacombs/: crew.py  main.py  patent_search.py
src/catacombs/config/: agents.yaml  tasks.yaml
src/catacombs/tools/: approach_tool.py  bestapproach_tool.py  exa_tool.py  ideation_tool.py  patent_search_tool.py  reward_tool.py
