[project]
name = "catacombs"
version = "0.1.0"
description = "catacombs using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
catacombs = "catacombs.main:run"
run_crew = "catacombs.main:run"
train = "catacombs.main:train"
replay = "catacombs.main:replay"
test = "catacombs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
